hw2-ihn-int/src/parser.output
Terminals unused in grammar

    KW_DEF
    CHAR
    SPACE


State 166 conflicts: 13 shift/reduce


Grammar

    0 $accept: NT_PROGRAM $end

    1 NT_PROGRAM: IDENTIFIER SEMICOLON NT_DECLARATION_LIST_OPT NT_FUNCTION_LIST_OPT NT_COMPOUND_STATEMENT KW_END

    2 NT_DECLARATION_LIST_OPT: %empty
    3                        | NT_DECLARATION_LIST

    4 NT_DECLARATION_LIST: NT_DECLARATION NT_DECLARATION_LIST
    5                    | NT_DECLARATION

    6 NT_FUNCTION_LIST_OPT: %empty
    7                     | NT_FUNCTION_LIST

    8 NT_FUNCTION_LIST: NT_FUNCTION NT_FUNCTION_LIST
    9                 | NT_FUNCTION

   10 NT_FUNCTION: NT_FUNCTION_DECLARATION
   11            | NT_FUNCTION_DEFINITION

   12 NT_FUNCTION_HEADER: IDENTIFIER LEFT_PAREN NT_FORMAL_ARG_LIST_OPT RIGHT_PAREN NT_RETURN_TYPE

   13 NT_FORMAL_ARG_LIST_OPT: %empty
   14                       | NT_FORMAL_ARG_LIST

   15 NT_FORMAL_ARG_LIST: NT_FORMAL_ARG SEMICOLON NT_FORMAL_ARG_LIST
   16                   | NT_FORMAL_ARG

   17 NT_RETURN_TYPE: %empty
   18               | COLON NT_SCALAR_TYPE

   19 NT_FUNCTION_DECLARATION: NT_FUNCTION_HEADER SEMICOLON

   20 NT_FUNCTION_DEFINITION: NT_FUNCTION_HEADER NT_COMPOUND_STATEMENT KW_END

   21 NT_FORMAL_ARG: NT_IDENTIFIER_LIST COLON NT_TYPE

   22 NT_DECLARATION: NT_VARIABLE_DECLARATION
   23               | NT_CONSTANT_DECLARATION

   24 NT_VARIABLE_DECLARATION: KW_VAR NT_IDENTIFIER_LIST COLON NT_TYPE SEMICOLON

   25 NT_CONSTANT_DECLARATION: KW_VAR NT_IDENTIFIER_LIST COLON SUB NT_INTEGER_LITERAL SEMICOLON
   26                        | KW_VAR NT_IDENTIFIER_LIST COLON NT_INTEGER_LITERAL SEMICOLON
   27                        | KW_VAR NT_IDENTIFIER_LIST COLON SUB NT_REAL_LITERAL SEMICOLON
   28                        | KW_VAR NT_IDENTIFIER_LIST COLON NT_REAL_LITERAL SEMICOLON
   29                        | KW_VAR NT_IDENTIFIER_LIST COLON NT_STRING_LITERAL SEMICOLON
   30                        | KW_VAR NT_IDENTIFIER_LIST COLON NT_BOOLEAN_LITERAL SEMICOLON

   31 NT_IDENTIFIER_LIST: IDENTIFIER COMMA NT_IDENTIFIER_LIST
   32                   | IDENTIFIER

   33 NT_TYPE: NT_SCALAR_TYPE
   34        | NT_ARRAY_TYPE

   35 NT_SCALAR_TYPE: KW_INT
   36               | KW_REAL
   37               | KW_STR
   38               | KW_BOOL

   39 NT_ARRAY_TYPE: KW_ARRAY NT_INTEGER_LITERAL KW_OF NT_TYPE

   40 NT_STATEMENT: NT_SIMPLE_STATEMENT
   41             | NT_CONDITIONAL_STATEMENT
   42             | NT_FUNCTION_CALL_STATEMENT
   43             | NT_LOOP_STATEMENT
   44             | NT_RETURN_STATEMENT
   45             | NT_COMPOUND_STATEMENT

   46 NT_SIMPLE_STATEMENT: NT_ASSIGNMENT
   47                    | NT_PRINT_STATEMENT
   48                    | NT_READ_STATEMENT

   49 NT_ASSIGNMENT: NT_VARIABLE_REFERENCE ASSIGNMENT NT_EXPRESSION SEMICOLON

   50 NT_PRINT_STATEMENT: KW_PRINT NT_EXPRESSION SEMICOLON

   51 NT_READ_STATEMENT: KW_READ NT_EXPRESSION SEMICOLON

   52 NT_CONDITIONAL_STATEMENT: KW_IF NT_EXPRESSION KW_THEN NT_COMPOUND_STATEMENT KW_ELSE NT_COMPOUND_STATEMENT KW_END KW_IF
   53                         | KW_IF NT_EXPRESSION KW_THEN NT_COMPOUND_STATEMENT KW_END KW_IF

   54 NT_FUNCTION_CALL_STATEMENT: NT_FUNCTION_CALL SEMICOLON

   55 NT_LOOP_STATEMENT: KW_WHILE NT_EXPRESSION KW_DO NT_COMPOUND_STATEMENT KW_END KW_DO
   56                  | KW_FOR IDENTIFIER ASSIGNMENT NT_INTEGER_LITERAL KW_TO NT_INTEGER_LITERAL KW_DO NT_COMPOUND_STATEMENT KW_END KW_DO

   57 NT_RETURN_STATEMENT: KW_RETURN NT_EXPRESSION SEMICOLON

   58 NT_COMPOUND_STATEMENT: KW_BEGIN NT_DECLARATION_LIST_OPT NT_STATEMENT_LIST_OPT KW_END

   59 NT_STATEMENT_LIST_OPT: %empty
   60                      | NT_STATEMENT_LIST

   61 NT_STATEMENT_LIST: NT_STATEMENT NT_STATEMENT_LIST
   62                  | NT_STATEMENT

   63 NT_EXPRESSION: NT_LITERAL_CONSTANT
   64              | NT_VARIABLE_REFERENCE
   65              | NT_FUNCTION_CALL
   66              | NT_BINARY_OPERATION
   67              | NT_UNARY_OPERATION
   68              | LEFT_PAREN NT_EXPRESSION RIGHT_PAREN

   69 NT_LITERAL_CONSTANT: NT_INTEGER_LITERAL
   70                    | NT_REAL_LITERAL
   71                    | NT_STRING_LITERAL
   72                    | NT_BOOLEAN_LITERAL

   73 NT_INTEGER_LITERAL: DECIMAL
   74                   | OCTAL

   75 NT_REAL_LITERAL: FLOAT
   76                | SCIENTIFIC

   77 NT_STRING_LITERAL: STRING

   78 NT_BOOLEAN_LITERAL: KW_TRUE
   79                   | KW_FALSE

   80 NT_VARIABLE_REFERENCE: IDENTIFIER NT_BRACKET_EXPRESSION_LIST_OPT

   81 NT_BRACKET_EXPRESSION_LIST_OPT: %empty
   82                               | NT_BRACKET_EXPRESSION_LIST

   83 NT_BRACKET_EXPRESSION_LIST: NT_BRACKET_EXPRESSION NT_BRACKET_EXPRESSION_LIST
   84                           | NT_BRACKET_EXPRESSION

   85 NT_BRACKET_EXPRESSION: LEFT_BRACKET NT_EXPRESSION RIGHT_BRACKET

   86 NT_FUNCTION_CALL: IDENTIFIER LEFT_PAREN NT_EXPRESSION_LIST_OPT RIGHT_PAREN

   87 NT_EXPRESSION_LIST_OPT: %empty
   88                       | NT_EXPRESSION_LIST

   89 NT_EXPRESSION_LIST: NT_EXPRESSION COMMA NT_EXPRESSION_LIST
   90                   | NT_EXPRESSION

   91 NT_BINARY_OPERATION: NT_EXPRESSION OR NT_EXPRESSION
   92                    | NT_EXPRESSION AND NT_EXPRESSION
   93                    | NT_EXPRESSION NT_RELATIONAL_OPERATOR NT_EXPRESSION
   94                    | NT_EXPRESSION SUB NT_EXPRESSION
   95                    | NT_EXPRESSION ADD NT_EXPRESSION
   96                    | NT_EXPRESSION DIV NT_EXPRESSION
   97                    | NT_EXPRESSION MOD NT_EXPRESSION
   98                    | NT_EXPRESSION MUL NT_EXPRESSION

   99 NT_RELATIONAL_OPERATOR: LT
  100                       | LE
  101                       | NE
  102                       | GE
  103                       | GT
  104                       | EQ

  105 NT_UNARY_OPERATION: NOT NT_EXPRESSION
  106                   | SUB NT_EXPRESSION


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    COMMA (258) 31 89
    SEMICOLON (259) 1 15 19 24 25 26 27 28 29 30 49 50 51 54 57
    COLON (260) 18 21 24 25 26 27 28 29 30
    LEFT_PAREN (261) 12 68 86
    RIGHT_PAREN (262) 12 68 86
    LEFT_BRACKET (263) 85
    RIGHT_BRACKET (264) 85
    IDENTIFIER (265) 1 12 31 32 56 80 86
    DECIMAL (266) 73
    OCTAL (267) 74
    FLOAT (268) 75
    SCIENTIFIC (269) 76
    KW_VAR (270) 24 25 26 27 28 29 30
    KW_DEF (271)
    KW_ARRAY (272) 39
    KW_OF (273) 39
    KW_BOOL (274) 38
    KW_INT (275) 35
    KW_REAL (276) 36
    KW_STR (277) 37
    KW_TRUE (278) 78
    KW_FALSE (279) 79
    KW_WHILE (280) 55
    KW_DO (281) 55 56
    KW_IF (282) 52 53
    KW_THEN (283) 52 53
    KW_ELSE (284) 52
    KW_FOR (285) 56
    KW_TO (286) 56
    KW_BEGIN (287) 58
    KW_END (288) 1 20 52 53 55 56 58
    KW_PRINT (289) 50
    KW_READ (290) 51
    KW_RETURN (291) 57
    CHAR (292)
    STRING (293) 77
    SPACE (294)
    ASSIGNMENT (295) 49 56
    OR (296) 91
    AND (297) 92
    NOT (298) 105
    LT (299) 99
    GT (300) 103
    EQ (301) 104
    LE (302) 100
    GE (303) 102
    NE (304) 101
    ADD (305) 95
    SUB (306) 25 27 94 106
    MUL (307) 98
    DIV (308) 96
    MOD (309) 97
    NEG (310)


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    NT_PROGRAM (57)
        on left: 1
        on right: 0
    NT_DECLARATION_LIST_OPT (58)
        on left: 2 3
        on right: 1 58
    NT_DECLARATION_LIST (59)
        on left: 4 5
        on right: 3 4
    NT_FUNCTION_LIST_OPT (60)
        on left: 6 7
        on right: 1
    NT_FUNCTION_LIST (61)
        on left: 8 9
        on right: 7 8
    NT_FUNCTION (62)
        on left: 10 11
        on right: 8 9
    NT_FUNCTION_HEADER (63)
        on left: 12
        on right: 19 20
    NT_FORMAL_ARG_LIST_OPT (64)
        on left: 13 14
        on right: 12
    NT_FORMAL_ARG_LIST (65)
        on left: 15 16
        on right: 14 15
    NT_RETURN_TYPE (66)
        on left: 17 18
        on right: 12
    NT_FUNCTION_DECLARATION (67)
        on left: 19
        on right: 10
    NT_FUNCTION_DEFINITION (68)
        on left: 20
        on right: 11
    NT_FORMAL_ARG (69)
        on left: 21
        on right: 15 16
    NT_DECLARATION (70)
        on left: 22 23
        on right: 4 5
    NT_VARIABLE_DECLARATION (71)
        on left: 24
        on right: 22
    NT_CONSTANT_DECLARATION (72)
        on left: 25 26 27 28 29 30
        on right: 23
    NT_IDENTIFIER_LIST (73)
        on left: 31 32
        on right: 21 24 25 26 27 28 29 30 31
    NT_TYPE (74)
        on left: 33 34
        on right: 21 24 39
    NT_SCALAR_TYPE (75)
        on left: 35 36 37 38
        on right: 18 33
    NT_ARRAY_TYPE (76)
        on left: 39
        on right: 34
    NT_STATEMENT (77)
        on left: 40 41 42 43 44 45
        on right: 61 62
    NT_SIMPLE_STATEMENT (78)
        on left: 46 47 48
        on right: 40
    NT_ASSIGNMENT (79)
        on left: 49
        on right: 46
    NT_PRINT_STATEMENT (80)
        on left: 50
        on right: 47
    NT_READ_STATEMENT (81)
        on left: 51
        on right: 48
    NT_CONDITIONAL_STATEMENT (82)
        on left: 52 53
        on right: 41
    NT_FUNCTION_CALL_STATEMENT (83)
        on left: 54
        on right: 42
    NT_LOOP_STATEMENT (84)
        on left: 55 56
        on right: 43
    NT_RETURN_STATEMENT (85)
        on left: 57
        on right: 44
    NT_COMPOUND_STATEMENT (86)
        on left: 58
        on right: 1 20 45 52 53 55 56
    NT_STATEMENT_LIST_OPT (87)
        on left: 59 60
        on right: 58
    NT_STATEMENT_LIST (88)
        on left: 61 62
        on right: 60 61
    NT_EXPRESSION (89)
        on left: 63 64 65 66 67 68
        on right: 49 50 51 52 53 55 57 68 85 89 90 91 92 93 94 95 96 97 98 105 106
    NT_LITERAL_CONSTANT (90)
        on left: 69 70 71 72
        on right: 63
    NT_INTEGER_LITERAL (91)
        on left: 73 74
        on right: 25 26 39 56 69
    NT_REAL_LITERAL (92)
        on left: 75 76
        on right: 27 28 70
    NT_STRING_LITERAL (93)
        on left: 77
        on right: 29 71
    NT_BOOLEAN_LITERAL (94)
        on left: 78 79
        on right: 30 72
    NT_VARIABLE_REFERENCE (95)
        on left: 80
        on right: 49 64
    NT_BRACKET_EXPRESSION_LIST_OPT (96)
        on left: 81 82
        on right: 80
    NT_BRACKET_EXPRESSION_LIST (97)
        on left: 83 84
        on right: 82 83
    NT_BRACKET_EXPRESSION (98)
        on left: 85
        on right: 83 84
    NT_FUNCTION_CALL (99)
        on left: 86
        on right: 54 65
    NT_EXPRESSION_LIST_OPT (100)
        on left: 87 88
        on right: 86
    NT_EXPRESSION_LIST (101)
        on left: 89 90
        on right: 88 89
    NT_BINARY_OPERATION (102)
        on left: 91 92 93 94 95 96 97 98
        on right: 66
    NT_RELATIONAL_OPERATOR (103)
        on left: 99 100 101 102 103 104
        on right: 93
    NT_UNARY_OPERATION (104)
        on left: 105 106
        on right: 67


State 0

    0 $accept: . NT_PROGRAM $end

    IDENTIFIER  shift, and go to state 1

    NT_PROGRAM  go to state 2


State 1

    1 NT_PROGRAM: IDENTIFIER . SEMICOLON NT_DECLARATION_LIST_OPT NT_FUNCTION_LIST_OPT NT_COMPOUND_STATEMENT KW_END

    SEMICOLON  shift, and go to state 3


State 2

    0 $accept: NT_PROGRAM . $end

    $end  shift, and go to state 4


State 3

    1 NT_PROGRAM: IDENTIFIER SEMICOLON . NT_DECLARATION_LIST_OPT NT_FUNCTION_LIST_OPT NT_COMPOUND_STATEMENT KW_END

    KW_VAR  shift, and go to state 5

    $default  reduce using rule 2 (NT_DECLARATION_LIST_OPT)

    NT_DECLARATION_LIST_OPT  go to state 6
    NT_DECLARATION_LIST      go to state 7
    NT_DECLARATION           go to state 8
    NT_VARIABLE_DECLARATION  go to state 9
    NT_CONSTANT_DECLARATION  go to state 10


State 4

    0 $accept: NT_PROGRAM $end .

    $default  accept


State 5

   24 NT_VARIABLE_DECLARATION: KW_VAR . NT_IDENTIFIER_LIST COLON NT_TYPE SEMICOLON
   25 NT_CONSTANT_DECLARATION: KW_VAR . NT_IDENTIFIER_LIST COLON SUB NT_INTEGER_LITERAL SEMICOLON
   26                        | KW_VAR . NT_IDENTIFIER_LIST COLON NT_INTEGER_LITERAL SEMICOLON
   27                        | KW_VAR . NT_IDENTIFIER_LIST COLON SUB NT_REAL_LITERAL SEMICOLON
   28                        | KW_VAR . NT_IDENTIFIER_LIST COLON NT_REAL_LITERAL SEMICOLON
   29                        | KW_VAR . NT_IDENTIFIER_LIST COLON NT_STRING_LITERAL SEMICOLON
   30                        | KW_VAR . NT_IDENTIFIER_LIST COLON NT_BOOLEAN_LITERAL SEMICOLON

    IDENTIFIER  shift, and go to state 11

    NT_IDENTIFIER_LIST  go to state 12


State 6

    1 NT_PROGRAM: IDENTIFIER SEMICOLON NT_DECLARATION_LIST_OPT . NT_FUNCTION_LIST_OPT NT_COMPOUND_STATEMENT KW_END

    IDENTIFIER  shift, and go to state 13

    $default  reduce using rule 6 (NT_FUNCTION_LIST_OPT)

    NT_FUNCTION_LIST_OPT     go to state 14
    NT_FUNCTION_LIST         go to state 15
    NT_FUNCTION              go to state 16
    NT_FUNCTION_HEADER       go to state 17
    NT_FUNCTION_DECLARATION  go to state 18
    NT_FUNCTION_DEFINITION   go to state 19


State 7

    3 NT_DECLARATION_LIST_OPT: NT_DECLARATION_LIST .

    $default  reduce using rule 3 (NT_DECLARATION_LIST_OPT)


State 8

    4 NT_DECLARATION_LIST: NT_DECLARATION . NT_DECLARATION_LIST
    5                    | NT_DECLARATION .

    KW_VAR  shift, and go to state 5

    $default  reduce using rule 5 (NT_DECLARATION_LIST)

    NT_DECLARATION_LIST      go to state 20
    NT_DECLARATION           go to state 8
    NT_VARIABLE_DECLARATION  go to state 9
    NT_CONSTANT_DECLARATION  go to state 10


State 9

   22 NT_DECLARATION: NT_VARIABLE_DECLARATION .

    $default  reduce using rule 22 (NT_DECLARATION)


State 10

   23 NT_DECLARATION: NT_CONSTANT_DECLARATION .

    $default  reduce using rule 23 (NT_DECLARATION)


State 11

   31 NT_IDENTIFIER_LIST: IDENTIFIER . COMMA NT_IDENTIFIER_LIST
   32                   | IDENTIFIER .

    COMMA  shift, and go to state 21

    $default  reduce using rule 32 (NT_IDENTIFIER_LIST)


State 12

   24 NT_VARIABLE_DECLARATION: KW_VAR NT_IDENTIFIER_LIST . COLON NT_TYPE SEMICOLON
   25 NT_CONSTANT_DECLARATION: KW_VAR NT_IDENTIFIER_LIST . COLON SUB NT_INTEGER_LITERAL SEMICOLON
   26                        | KW_VAR NT_IDENTIFIER_LIST . COLON NT_INTEGER_LITERAL SEMICOLON
   27                        | KW_VAR NT_IDENTIFIER_LIST . COLON SUB NT_REAL_LITERAL SEMICOLON
   28                        | KW_VAR NT_IDENTIFIER_LIST . COLON NT_REAL_LITERAL SEMICOLON
   29                        | KW_VAR NT_IDENTIFIER_LIST . COLON NT_STRING_LITERAL SEMICOLON
   30                        | KW_VAR NT_IDENTIFIER_LIST . COLON NT_BOOLEAN_LITERAL SEMICOLON

    COLON  shift, and go to state 22


State 13

   12 NT_FUNCTION_HEADER: IDENTIFIER . LEFT_PAREN NT_FORMAL_ARG_LIST_OPT RIGHT_PAREN NT_RETURN_TYPE

    LEFT_PAREN  shift, and go to state 23


State 14

    1 NT_PROGRAM: IDENTIFIER SEMICOLON NT_DECLARATION_LIST_OPT NT_FUNCTION_LIST_OPT . NT_COMPOUND_STATEMENT KW_END

    KW_BEGIN  shift, and go to state 24

    NT_COMPOUND_STATEMENT  go to state 25


State 15

    7 NT_FUNCTION_LIST_OPT: NT_FUNCTION_LIST .

    $default  reduce using rule 7 (NT_FUNCTION_LIST_OPT)


State 16

    8 NT_FUNCTION_LIST: NT_FUNCTION . NT_FUNCTION_LIST
    9                 | NT_FUNCTION .

    IDENTIFIER  shift, and go to state 13

    $default  reduce using rule 9 (NT_FUNCTION_LIST)

    NT_FUNCTION_LIST         go to state 26
    NT_FUNCTION              go to state 16
    NT_FUNCTION_HEADER       go to state 17
    NT_FUNCTION_DECLARATION  go to state 18
    NT_FUNCTION_DEFINITION   go to state 19


State 17

   19 NT_FUNCTION_DECLARATION: NT_FUNCTION_HEADER . SEMICOLON
   20 NT_FUNCTION_DEFINITION: NT_FUNCTION_HEADER . NT_COMPOUND_STATEMENT KW_END

    SEMICOLON  shift, and go to state 27
    KW_BEGIN   shift, and go to state 24

    NT_COMPOUND_STATEMENT  go to state 28


State 18

   10 NT_FUNCTION: NT_FUNCTION_DECLARATION .

    $default  reduce using rule 10 (NT_FUNCTION)


State 19

   11 NT_FUNCTION: NT_FUNCTION_DEFINITION .

    $default  reduce using rule 11 (NT_FUNCTION)


State 20

    4 NT_DECLARATION_LIST: NT_DECLARATION NT_DECLARATION_LIST .

    $default  reduce using rule 4 (NT_DECLARATION_LIST)


State 21

   31 NT_IDENTIFIER_LIST: IDENTIFIER COMMA . NT_IDENTIFIER_LIST

    IDENTIFIER  shift, and go to state 11

    NT_IDENTIFIER_LIST  go to state 29


State 22

   24 NT_VARIABLE_DECLARATION: KW_VAR NT_IDENTIFIER_LIST COLON . NT_TYPE SEMICOLON
   25 NT_CONSTANT_DECLARATION: KW_VAR NT_IDENTIFIER_LIST COLON . SUB NT_INTEGER_LITERAL SEMICOLON
   26                        | KW_VAR NT_IDENTIFIER_LIST COLON . NT_INTEGER_LITERAL SEMICOLON
   27                        | KW_VAR NT_IDENTIFIER_LIST COLON . SUB NT_REAL_LITERAL SEMICOLON
   28                        | KW_VAR NT_IDENTIFIER_LIST COLON . NT_REAL_LITERAL SEMICOLON
   29                        | KW_VAR NT_IDENTIFIER_LIST COLON . NT_STRING_LITERAL SEMICOLON
   30                        | KW_VAR NT_IDENTIFIER_LIST COLON . NT_BOOLEAN_LITERAL SEMICOLON
